# DatahubMCP

./: .env.example  .gitignore  CONTRIBUTING.md  HOW_TO_CONFIGURE.md  PORTFOLIO_NOTES.md  PUSH_TO_GITHUB.md  README.md  SETUP.md  database.py  datahubmcp.py  google_service.py  kmmcp.py  models.py  pyproject.toml
